<resources>
    <string name="app_name">Turn Of Songs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_login">log in</string>
    <string name="menu_signUp">Create your account</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_explain_text">Fill in the box with the email address of your account</string>
    <string name="forgot_password_field">Enter your userMail</string>
    <string name="forgot_password_verify">verify my account</string>
    <string name="change_password_title">Change your password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_explain">Here you can reset your password to the one you want! Try not to forget it this time ;)</string>
    <string name="profil_menu_playlists_title">My Playlists</string>
    <string name="profil_menu_profil_title">Your Profil</string>
    <string name="profil_menu_logOut">Log Out</string>
    <string name="profil_menu_share">Share</string>
    <string name="profil_menu_search">Search</string>
    <string name="profil_menu_communicate">Communicate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_explaination_menu">This application will help you convey a message with cool songs. Try to make some great turn of phrases through music with the search option right on the left side!</string>

</resources>